	wait until package upgrade is complete before returning.
	* Added a 'filedrop.cgi' CGI test in 'src/tests/'.
2016-02-03 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.8.8.
2016-02-19 Fred Gleason <fredg@paravelsystems.com>
	* Add a 'WHHttpServer' class in 'src/wh/whhttpserver.cpp' and
	'src/wh/whhttpserver.h'.
	* Add a 'WHHttpRequest' class in 'src/wh/whhttprequest.cpp' and
	'src/wh/whhttprequest.h'.
2016-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpServer::addStaticSource()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'WHHttpServer::addCgiSource()' method in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Extended CGI support to include POST method calls.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that caused 'WHHttpServer' to segfault when collecting
	garbage from stale connections.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'WHHttpServer::requestReceived()' signal from
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
	* Added 'WHHttpServer::requestReceived()' virtual method to
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'maxsize' parameter from the constructor of the
	'WHCgiApplication' class in 'src/wh/whcgiapplication.cpp' and
	'src/wh/whcgiapplication.h'.
2016-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/wh/whhttpconnection.cpp' that was causing
	incorrect values to be passed in the 'HTTP_HOST' parameter to CGI
	processes.
2016-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Changed the 'WHHttpServer::requestReceived(int,WHHttpRequest *)'
	method to 'WHHttpServer::requestReceived(WHHttpConnection *)' in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.